--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.name=postgres
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=org.postgresql.Driver
